ConnexoProject/force-app/main/default/objects/DMS__c/DMS__c.object-meta.xml
<CustomObject>
    <label>DMS</label>
    <nameField>
        <label>DMS Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DMS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>