ConnexoProject/force-app/main/default/objects/DMS__c/fields/Approvers__c.field-meta.xml
<CustomField>
    <fullName>Approvers__c</fullName>
    <inlineHelpText>Approvers of the corporate document.</inlineHelpText>
    <label>Approvers</label>
    <type>TextArea</type>
</CustomField>