ConnexoProject/force-app/main/default/objects/DMS__c/fields/Associated_Quality_Event__c.field-meta.xml
<CustomField>
    <fullName>Associated_Quality_Event__c</fullName>
    <inlineHelpText>Associated Quality Event[ CR, CAPA , Deviation )</inlineHelpText>
    <label>Associated Quality Event</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CAPA</fullName>
            </value>
            <value>
                <fullName>Change Control</fullName>
            </value>
            <value>
                <fullName>Deviation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>