ConnexoProject/force-app/main/default/objects/DMS__c/fields/Author__c.field-meta.xml
<CustomField>
    <fullName>Author__c</fullName>
    <description>Author of the corporate document.</description>
    <label>Author</label>
    <type>TextArea</type>
</CustomField>