ConnexoProject/force-app/main/default/objects/DMS__c/fields/Documen_Number__c.field-meta.xml
<CustomField>
    <fullName>Documen_Number__c</fullName>
    <label>Documen Number</label>
    <type>TextArea</type>
</CustomField>