ConnexoProject/force-app/main/default/objects/DMS__c/fields/Document_Department__c.field-meta.xml
<CustomField>
    <fullName>Document_Department__c</fullName>
    <label>Document Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Environmental Health and Safety (HS)</fullName>
            </value>
            <value>
                <fullName>Facilities and Equipment (FE)</fullName>
            </value>
            <value>
                <fullName>Information Technology (IT)</fullName>
            </value>
            <value>
                <fullName>Laboratory (QC)</fullName>
            </value>
            <value>
                <fullName>Process Development (PD)</fullName>
            </value>
            <value>
                <fullName>Production (PR)</fullName>
            </value>
            <value>
                <fullName>Quality Management (QM)</fullName>
            </value>
            <value>
                <fullName>Supply Chain / Materials Management (SC)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>