ConnexoProject/force-app/main/default/objects/DMS__c/fields/Document_Names__c.field-meta.xml
<CustomField>
    <fullName>Document_Names__c</fullName>
    <label>Document Name(s)</label>
    <length>80</length>
    <type>Text</type>
</CustomField>