ConnexoProject/force-app/main/default/objects/DMS__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>AD Certificate of Analysis (ADCOA)</fullName>
            </value>
            <value>
                <fullName>AD R&amp;D Study Protocol (ADRDP)</fullName>
            </value>
            <value>
                <fullName>BOM</fullName>
            </value>
            <value>
                <fullName>Bundle (BND)</fullName>
            </value>
            <value>
                <fullName>Cell Bank Process Plan (CBPP)</fullName>
            </value>
            <value>
                <fullName>Certificate of Analysis (CoA)</fullName>
            </value>
            <value>
                <fullName>Certificate of Testing (CoT)</fullName>
            </value>
            <value>
                <fullName>Change Control Request (Legacy) (CCR)</fullName>
            </value>
            <value>
                <fullName>Controlled Document (CD)</fullName>
            </value>
            <value>
                <fullName>Electronic Form (EF)</fullName>
            </value>
            <value>
                <fullName>Equipment Classification Change (ECC</fullName>
            </value>
            <value>
                <fullName>Equipment Risk Assessment (ERA)</fullName>
            </value>
            <value>
                <fullName>Equipment Validation Package (EVP)</fullName>
            </value>
            <value>
                <fullName>Facility Validation Package (VP)</fullName>
            </value>
            <value>
                <fullName>Form (FRM)</fullName>
            </value>
            <value>
                <fullName>Form (Legacy) (Form)</fullName>
            </value>
            <value>
                <fullName>General Method (GENMD)</fullName>
            </value>
            <value>
                <fullName>General Method (GMD)</fullName>
            </value>
            <value>
                <fullName>Job Aid (Legacy) (JA)</fullName>
            </value>
            <value>
                <fullName>Laboratory Investigation Report (LIR)</fullName>
            </value>
            <value>
                <fullName>Master Batch Record (MBR)</fullName>
            </value>
            <value>
                <fullName>Material Release Specification (Legacy) (MRSPEC)</fullName>
            </value>
            <value>
                <fullName>Material Specification (SPEC)</fullName>
            </value>
            <value>
                <fullName>Method (Legacy) (MD)</fullName>
            </value>
            <value>
                <fullName>MR - MRSPEC</fullName>
            </value>
            <value>
                <fullName>PD Test Document</fullName>
            </value>
            <value>
                <fullName>Plasmid Standard Qualification Specification (PSQSPEC)</fullName>
            </value>
            <value>
                <fullName>Policy (POL)</fullName>
            </value>
            <value>
                <fullName>Process Risk Assessment (PRA)</fullName>
            </value>
            <value>
                <fullName>Quality Assurance Agreements (QAA)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>