ConnexoProject/force-app/main/default/objects/DMS__c/fields/Document_Version__c.field-meta.xml
<CustomField>
    <fullName>Document_Version__c</fullName>
    <label>Document Version</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Revise</fullName>
            </value>
            <value>
                <fullName>Obsolete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>