ConnexoProject/force-app/main/default/objects/DMS__c/fields/Justification__c.field-meta.xml
<CustomField>
    <fullName>Justification__c</fullName>
    <inlineHelpText>Why is it changing or being made obsolete</inlineHelpText>
    <label>Justification</label>
    <type>TextArea</type>
</CustomField>