ConnexoProject/force-app/main/default/objects/DMS__c/fields/Legacy_Document_Number__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Document_Number__c</fullName>
    <label>Legacy Document Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>