ConnexoProject/force-app/main/default/objects/DMS__c/fields/Quiz_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Quiz_Requirement__c</fullName>
    <label>Quiz Requirement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>