ConnexoProject/force-app/main/default/objects/DMS__c/fields/Reference_CD__c.field-meta.xml
<CustomField>
    <fullName>Reference_CD__c</fullName>
    <inlineHelpText>Referenced Corporate Document</inlineHelpText>
    <label>Reference CD</label>
    <type>Url</type>
</CustomField>