ConnexoProject/force-app/main/default/objects/DMS__c/fields/Reviewers__c.field-meta.xml
<CustomField>
    <fullName>Reviewers__c</fullName>
    <inlineHelpText>Reviewers of the corporate document.</inlineHelpText>
    <label>Reviewers</label>
    <type>TextArea</type>
</CustomField>