ConnexoProject/force-app/main/default/objects/DMS__c/fields/Short_Description__c.field-meta.xml
<CustomField>
    <fullName>Short_Description__c</fullName>
    <description>Short description of the corporate document record</description>
    <label>Short Description</label>
    <type>TextArea</type>
</CustomField>