ConnexoProject/force-app/main/default/objects/DMS__c/fields/Training_Impacted__c.field-meta.xml
<CustomField>
    <fullName>Training_Impacted__c</fullName>
    <label>Training Impacted</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>