ConnexoProject/force-app/main/default/objects/DMS__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <inlineHelpText>The full URL of the Corporate Document.</inlineHelpText>
    <label>URL</label>
    <type>Url</type>
</CustomField>