ConnexoProject/force-app/main/default/objects/DMS__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AssignedTo__c</columns>
    <columns>Author__c</columns>
    <columns>Approvers__c</columns>
    <columns>Reviewers__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>